try to fixed a pb with bg on small screen

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 .body {
     margin: 0;
     margin-top: 1rem;
+    background-color: black;
     background: url(img/backpic.jpg) repeat-x center center fixed;
     background-size: cover;
     position: relative;
